# ENPM661_Project4

./: README.md
package_122288393/: CMakeLists.txt  package.xml
package_122288393/launch/: pick_and_place.launch.py
package_122288393/src/: pick_and_place.cpp
panda_movit_config/: .setup_assistant  CMakeLists.txt  package.xml
panda_movit_config/config/: moveit_controllers.yaml  panda.ros2_control.xacro  panda.srdf  panda.urdf.xacro  ros2_controllers.yaml
panda_movit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
